[package]
name = "prism_cache"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
thiserror = "2.0.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
config = { version = "0.15.9", features = ["yaml"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
moka = { version = "0.12", features = ["future"] }
async-trait = "0.1.87"
anyhow = "1.0.97"

# for providers
datafusion = "44.0.0"
serde_json = "1.0.140"
toml = "0.8.20"
deltalake = { version = "0.24.0", features = ["azure", "datafusion"] }
url = "2.5.0"
